Carousel setup without text

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,10 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+
+*
+{
+    background-color: #0a0a0c;
+}
 /* 
 
     You can write your own styles here...
