--- a/src/js/view/Carousel.scss
+++ b/src/js/view/Carousel.scss
@@ -1,10 +1,12 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-.img {
-    size: 100%;
-    z-index: 100;
-}
-
+// .img {
+//     size: 100%;
+//     z-index: 100;
+// }
+// .carousel-caption {
+//     background: none;
+// }
 // .carousel {
 //     size: 10%;
 // }
