Cascade mode initiated, first 2 parts done

--- a/src/js/index.scss
+++ b/src/js/index.scss
@@ -3,7 +3,7 @@
 
 *
 {
-    background-color: #0a0a0c;
+    // background-color: #0a0a0c;
     font-family: 'Poppins', Geneva, Verdana, sans-serif;
 }
 /* 
