--- a/src/js/view/Slides/CellFuel/CellFuel.scss
+++ b/src/js/view/Slides/CellFuel/CellFuel.scss
@@ -1,5 +1,11 @@
-*
+
+
+.CellFuel .Cell
 {
+    margin-top: 9rem;
     color: blanchedalmond;
-    z-index: 1000;
+    background-image: url("Battery.png") ;
+    background-size: cover;
+    background-attachment: local;
 }
+
