--- a/src/js/view/Home.scss
+++ b/src/js/view/Home.scss
@@ -1,5 +1,8 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+body{
+    background-color:#0a0a0c;
+}
 // .img {
 //     size: 100%;
 //     z-index: 100;
