--- a/src/js/view/Slides/Hydrogen/Hydrogen.scss
+++ b/src/js/view/Slides/Hydrogen/Hydrogen.scss
@@ -1,5 +1,21 @@
-*
+#hydrogen
 {
-    color: blanchedalmond;
-    z-index: 1000;
+    color: rgb(255, 245, 230);
+    position:absolute;
+    top: 100%;
+    // background-image: url("./HydrogenImage.png");
+    // background-size: cover;
+    background-color: #0a0a0c;
+    // background-position: center center;
+    // background-repeat: no-repeat;
+    // background-attachment:scroll;
+    height: 90%;
+    width: 100%;
+    font-size: 20px;
+}
+
+#hydrogen .Hy-text
+{
+    margin-top: 10rem;
+    background-color: #0a0a0c69;
 }
