--- a/src/js/view/Slides/CellFuel/CellFuel.scss
+++ b/src/js/view/Slides/CellFuel/CellFuel.scss
@@ -1,11 +1,13 @@
-
-
-.CellFuel .Cell
+.CellFuel
 {
-    margin-top: 9rem;
-    color: blanchedalmond;
-    background-image: url("Battery.png") ;
-    background-size: cover;
-    background-attachment: local;
+    position: absolute;
+    top: 180%;
+    color: rgb(255, 245, 230);
+    height: 90%;
+    width: 100%;
 }
 
+.CellFuel p
+{
+    font-size: 20px;
+}
