Platform and Design1 done

--- a/src/js/view/Home.scss
+++ b/src/js/view/Home.scss
@@ -13,3 +13,13 @@ body{
 // .carousel {
 //     size: 10%;
 // }
+h1 {
+    margin: auto;
+
+}
+p {
+    font-size: 25px;
+    width: 80%;
+    margin: auto;
+    margin-top: 2rem;
+  }
