Navbar href working

--- a/src/js/view/Home.scss
+++ b/src/js/view/Home.scss
@@ -13,6 +13,11 @@ body{
 // .carousel {
 //     size: 10%;
 // }
+.car-img{
+    position: absolute;
+    width: 100%;
+    top: 385%;
+}
 h1 {
     margin: auto;
 
