--- a/src/js/view/Slides/DesignPack/DesignOne/DesignOne.scss
+++ b/src/js/view/Slides/DesignPack/DesignOne/DesignOne.scss
@@ -1,16 +1,13 @@
 .Design-1 {
     color: rgb(255, 245, 230);
-    position: absolute;
-    top: 300%;
     background-image: url("./FrontCar.png");
     background-size: cover;
     background-color: #0a0a0c;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment:scroll;
-    height: 90%;
-    width: 100%;
-    padding-top: 8rem;
+    height: 74vh;
+    margin: 0vh 12px 0 0;
 }
 
 .Design-1 .Design-1-text{
