--- a/src/js/view/Slides/PlataformConceptVision/PlataformConceptVision.scss
+++ b/src/js/view/Slides/PlataformConceptVision/PlataformConceptVision.scss
@@ -1,14 +1,11 @@
 .Plat-text{
     color: rgb(255, 245, 230);
-    position: absolute;
-    top: 230%;
     background-image: url("./SkelletonWithBattery.png");
     background-size: cover;
     background-color: #0a0a0c;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment:scroll;
-    height: 90%;
-    width: 100%;
-    padding-top: 8rem;
+    height: 74vh;
+    margin: 0 5vw 0 5vw;
 }
