--- a/src/js/view/Slides/CellFuel/CellFuel.scss
+++ b/src/js/view/Slides/CellFuel/CellFuel.scss
@@ -1,10 +1,8 @@
 .CellFuel
 {
-    position: absolute;
-    top: 180%;
+    margin: 0 5vw 0 5vw;
     color: rgb(255, 245, 230);
-    height: 90%;
-    width: 100%;
+    height: 74vh;
 }
 
 .CellFuel p {
