--- a/src/js/view/Slides/DesignPack/DesignTwo/DesignTwo.scss
+++ b/src/js/view/Slides/DesignPack/DesignTwo/DesignTwo.scss
@@ -1,18 +1,16 @@
 .Design-2 {
     color: rgb(255, 245, 230);
-    position: absolute;
-    top: 460%;
     background-image: url("./RearCar.png");
     background-size: cover;
     background-color: #0a0a0c;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment:scroll;
-    height: 90%;
-    width: 100%;
-    padding-top: 8rem;
+    height: 74vh;
+    margin: 0 0 0 0;
 }
 
 .Design-2 .Design-2-text{
     padding-top: 25rem;
+    padding-left: 2rem;
 }
