--- a/src/js/view/Slides/Hydrogen/Hydrogen.scss
+++ b/src/js/view/Slides/Hydrogen/Hydrogen.scss
@@ -1,17 +1,14 @@
 #hydrogen
 {
+    margin: 0 5vw 0 5vw;
     color: rgb(255, 245, 230);
-    position:absolute;
-    top: 100%;
     background-color: #0a0a0c;
-    height: 90%;
-    width: 100%;
+    height: 74vh;
     font-size: 20px;
 }
 
 #hydrogen .Hy-text
 {
-    margin-top: 10rem;
     background-color: #0a0a0c69;
 }
 
