--- a/src/js/view/Slides/Philosophy/Philosophy.scss
+++ b/src/js/view/Slides/Philosophy/Philosophy.scss
@@ -1,17 +1,14 @@
 #philosophy 
 {
     color: rgb(255, 245, 230);
-    position: absolute;
-    top: 20%;
     background-image: url("./PhilosophyHex.png");
     background-size: cover;
     background-color: #0a0a0c;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment:scroll;
-    height: 90%;
-    width: 100%;
-    
+    height: 74vh;
+    width: 100vw;
 }
 
 @media only screen and (max-width: 767px) {
@@ -26,6 +23,9 @@
 #philosophy p {
   font-size: 25px;
   width: 80%;
-  margin: auto;
-  margin-top: 2rem;
+  margin: 2rem auto 0 auto;
+}
+
+#philosophy h1{
+  margin-left: 5vw;
 }
